--- a/package.json
+++ b/package.json
@@ -4,18 +4,31 @@
   "description": "A tool for generating SEO-friendly content using AI.",
   "main": "seoGenerator.js",
   "scripts": {
-    "build": "tsc seoGenerator.ts",
-    "start": "node seoGenerator.js",
-    "dev": "npm run build && npm run start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "build-lib": "tsc seoGenerator.ts --outDir lib --target es2020 --module commonjs"
   },
-  "keywords": ["seo", "content", "ai", "typescript", "openrouter"],
+  "keywords": ["seo", "content", "ai", "typescript", "openrouter", "nextjs"],
   "author": "Your Name Here",
   "license": "ISC",
   "dependencies": {
+    "next": "^14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/node-fetch": "^2.6.12",
-    "typescript": "^5.x.x"
+    "typescript": "^5.0.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.0.0"
   }
 }
