--- a/package.json
+++ b/package.json
@@ -10,25 +10,35 @@
     "lint": "next lint",
     "build-lib": "tsc seoGenerator.ts --outDir lib --target es2020 --module commonjs"
   },
-  "keywords": ["seo", "content", "ai", "typescript", "openrouter", "nextjs"],
+  "keywords": [
+    "seo",
+    "content",
+    "ai",
+    "typescript",
+    "openrouter",
+    "nextjs"
+  ],
   "author": "Your Name Here",
   "license": "ISC",
   "dependencies": {
     "next": "^14.0.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "node-fetch": "^3.3.2"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@types/node": "^20.0.0",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "@types/node-fetch": "^2.6.12",
-    "typescript": "^5.0.0",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
+    "cssnano": "^7.0.7",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.31",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   }
 }
