--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@fullhuman/postcss-purgecss": "^7.0.2",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
